# dsa

./: .gitignore  .todo  README  README.md  pyproject.toml
c/: 1.c  621.c
cpp/: 1.cpp  128.cpp  130.cpp  1518.cpp  1598.cpp  1656.cpp  21.cpp  3110.cpp  3242.cpp  355.cpp
haskell/euler/: 13.hs  25.hs  31.hs  6.hs
janet/: shell.nix
janet/src/2024/: trebuchet.janet
notes/: process-state.norg  process.norg
notes/concurrency/: mutual-exclusion.norg
notes/memory/: segments.norg
notes/process/: context.norg  security.norg
pydsa/: list.py
pydsa/algoexpert/: waystomakechange.py
pydsa/bst/: bst.py  clrs.py
pydsa/dictionary/: skiena.py
pydsa/disjointset/: disjointset.py
pydsa/leetcode/: 1169.py  1615.py  1791.py  2296.py  261.py  300.py  323.py  501.py  518.py  776.py  938.py
pydsa/leetcode/705/: open.py
pydsa/list/: clrs.py  ctci.py  dlist.py  lc.py  list.py  skiena.py
pydsa/usaco/gifts/: gift_t.py
pydsa/usaco/ride/: ride.py  ride_t.py
python/src/algoexpert/: levenshtein.py  maxsubsetsum.py  mincoins.py
python/src/cf/: 2033c.py  stdin
python/src/euler/: 10.py  2.py  (+2 more)
rust/dsa/: .clocignore  .solved.md  notes.md  questions.md  todo.md  tricks.md
src/algoexpert/: levenshtein.py  maxsubsetsum.py  mincoins.py  nwaystraversegraph.py  waystomakechange.py
src/dictionary/: skiena.py
src/disjointset/: disjointset.py
src/euler/: 22.py
src/graph/: skiena.py
src/leetcode/: 1245.py  207.py  322.py  62.py  684.py  98.py  drop.sh  nodedef.py
src/misc/: stocks.py
src/pramp/: flatten.py  maximuminfo.py
src/usaco/: test.py
tests/: tlist.py
(+1091 files in other folders)
