[tool.poetry]
name = "pydsa"
version = "0.1.0"
description = "Personal repository for practicing data structures."
authors = ["Tazmilur Saad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hypothesis = "^6.92.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"