[tool.poetry]
name = "pydsa"
version = "0.1.0"
description = "Personal repository for practicing data structures."
authors = ["Tazmilur Saad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hypothesis = "^6.92.1"
pytest = "^8.1.1"
sortedcontainers = "^2.4.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"