[tool.poetry]
name = "pydsa"
version = "0.1.0"
description = "Personal repository for practicing data structures."
authors = ["Tazmilur Saad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"